# shows

./: .gitignore  Dockerfile  Makefile  README.rst  docker.env  env.sh  env_secrets.sh.tpl  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: db_backup.yaml  deployment.yaml  destruction.yaml  remove_unused_shows.yaml  reusable_restart_app.yaml  update_show_data.yaml  update_show_data_starting_from_show_id.yaml
deployment/: configmap.yaml  deployment.yaml  ingress_backend.yaml  ingress_frontend.yaml  service_backend.yaml  service_frontend.yaml
frontend/: index.html  package.json
frontend/src/: App.vue  const.ts  router.ts  types.ts
frontend/src/components/: FooterComponent.vue  LoadingIndicator.vue  LogoComponent.vue  MenuComponent.vue  ShareButton.vue  ShowsList.vue
frontend/src/composables/: useListNavigation.ts  useListViewFiltering.ts  useListViewSorting.ts  useRecordCounts.ts  useRecordFilters.ts  useRecordSorting.ts  useRecordsData.ts  useSEO.ts  useShowListSEO.ts  useShowOperations.ts  useStructuredData.ts
frontend/src/services/: listViewService.ts
frontend/src/stores/: auth.ts  listView.ts  records.ts
frontend/src/styles/: dark-theme-custom.css  dark-theme-typography.css  theme.scss
frontend/src/types/: listView.ts
frontend/src/utils/: showUtils.ts
frontend/src/views/: AboutView.vue  LandingView.vue  ListView.vue  RecommendationsView.vue  SearchView.vue  ShowDetailView.vue  StatsView.vue  TrendingView.vue  UserPreferencesView.vue  types.ts
src/shows/: __init__.py  celery.py  settings.py  urls.py
src/showsapp/: admin.py  apps.py  converters.py  models.py  renderers.py  serializers.py  tasks.py  types.py  utils.py
src/showsapp/fixtures/: lists.json  providers.json
src/showsapp/migrations/: 0001_initial.py  0002_remove_show_runtime.py  0003_show_status.py  0004_remove_user_loaded_initial_data_and_more.py
src/showsapp/omdb/: __init__.py  omdb.py  types.py
src/showsapp/openai/: client.py  types.py
(+27 files in other folders)
